<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/view_spacing"
    android:paddingEnd="@dimen/view_spacing"
    tools:context=".ui.cart.CartFragment">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_your_order" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selected_dishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_big_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/viewholder_cart" />

    <Button
        android:id="@+id/update_order"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginTop="@dimen/view_small_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_order_button" />

    <Button
        android:id="@+id/make_order"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginTop="@dimen/view_small_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_order_button" />

</LinearLayout>