<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/view_spacing">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/AppTheme.MenuItem.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="text" />

    <TextView
        android:id="@+id/description"
        style="@style/AppTheme.MenuItem.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_small_spacing"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="description" />

    <ImageButton
        android:id="@+id/minus_button"
        android:layout_width="@dimen/action_button_size"
        android:layout_height="@dimen/action_button_size"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_minus"
        android:contentDescription="@string/minus_button_description"
        app:layout_constraintEnd_toStartOf="@+id/amount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/amount"
        style="@style/AppTheme.MenuItem.Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_spacing"
        android:layout_marginEnd="@dimen/view_spacing"
        android:text="@string/initial_amount"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/minus_button"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/minus_button"
        app:layout_constraintTop_toTopOf="@id/minus_button" />

    <ImageButton
        android:id="@+id/plus_button"
        android:layout_width="@dimen/action_button_size"
        android:layout_height="@dimen/action_button_size"
        android:src="@drawable/ic_plus"
        android:contentDescription="@string/plus_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/amount" />

</androidx.constraintlayout.widget.ConstraintLayout>